<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.eneserdogan.bookcommentapp.LoginUI.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_navigation_home_to_bookDetailFragment"
            app:destination="@id/bookDetailFragment" />
    </fragment>

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.eneserdogan.bookcommentapp.LoginUI.ui.search.SearchFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_search" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.eneserdogan.bookcommentapp.LoginUI.ui.profil.ProfilFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_profil" >
        <action
            android:id="@+id/profileFragment_to_normalUser_setting"
            app:destination="@id/normalUserSettingFragment" />
    </fragment>
    <fragment
        android:id="@+id/normalUserSettingFragment"
        android:name="com.eneserdogan.bookcommentapp.LoginUI.ui.profil.NormalUserSettingFragment"
        android:label="fragment_normal_user_setting"
        tools:layout="@layout/fragment_normal_user_setting" />
    <fragment
        android:id="@+id/bookDetailFragment"
        android:name="com.eneserdogan.bookcommentapp.LoginUI.ui.BookDetail.BookDetailFragment"
        android:label="BookDetailFragment" />
</navigation>